36. How to insert an element if that element is not already present inside the array.txt
[âœ”ï¸] graphicoder> db.interschool.insertMany([
... {"sports_name": "Kabbadi", "players" : ["Ram", "Shyam", "Guru", "Uday", "Darsh"]}
... ]);
{
  acknowledged: true,
  insertedIds: { '0': ObjectId("64e5a1fe1771d1c95ad66183") }
}
[âœ”ï¸] graphicoder> db.interschool.find().pretty();
[
  {
    _id: ObjectId("64e5a1fe1771d1c95ad66183"),
    sports_name: 'Kabbadi',
    players: [ 'Ram', 'Shyam', 'Guru', 'Uday', 'Darsh' ]
  }
]

[ðŸ“] addToSet operator see that whether Aakesh name is there in sports_name array, if not then it will insert or it will not.
[âœ”ï¸] graphicoder> db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": "Aakesh"}});
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
[âœ”ï¸] graphicoder> db.interschool.find().pretty();
[
  {
    _id: ObjectId("64e5a1fe1771d1c95ad66183"),
    sports_name: 'Kabbadi',
    players: [ 'Ram', 'Shyam', 'Guru', 'Uday', 'Darsh', 'Aakesh' ]
  }
]
[âœ”ï¸] graphicoder> db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": "Aakesh"}});
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 0,
  upsertedCount: 0
}

[ðŸ“] each operator is used to insert many values inside the array, and when any of the value matches then it will not insert that specific value.
[âœ”ï¸] graphicoder>  db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": {$each: ["Aakav","Aarav", "Advik", "Darpan", "Evak", "Ekansh"]}});
Uncaught:
SyntaxError: Unexpected token, expected "," (1:142)

> 1 |  db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": {$each: ["Aakav","Aarav", "Advik", "Darpan", "Evak", "Ekansh"]}});
    |
                                             ^
  2 |

[âœ”ï¸] graphicoder>  db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": {$each: ["Aakav","Aarav", "Advik", "Darpan", "Evak", "Ekansh"]}}});
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
[âœ”ï¸] graphicoder> db.interschool.find().pretty();
[
  {
    _id: ObjectId("64e5a1fe1771d1c95ad66183"),
    sports_name: 'Kabbadi',
    players: [
      'Ram',   'Shyam',
      'Guru',  'Uday',
      'Darsh', 'Aakesh',
      'Aakav', 'Aarav',
      'Advik', 'Darpan',
      'Evak',  'Ekansh'
    ]
  }
]
[âœ”ï¸] graphicoder> db.interschool.find();
[
  {
    _id: ObjectId("64e5a1fe1771d1c95ad66183"),
    sports_name: 'Kabbadi',
    players: [
      'Ram',   'Shyam',
      'Guru',  'Uday',
      'Darsh', 'Aakesh',
      'Aakav', 'Aarav',
      'Advik', 'Darpan',
      'Evak',  'Ekansh'
    ]
  }
]
[âœ”ï¸] graphicoder>  db.interschool.updateOne({"sports_name": "Kabbadi"}, {$addToSet: {"players": {$each: ["Aakav","Aarav", "Advik", "Darpan", "Evak", "Ekansh", "Adarsh"]}}});
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
[âœ”ï¸] graphicoder> db.interschool.find().pretty();
[
  {
    _id: ObjectId("64e5a1fe1771d1c95ad66183"),
    sports_name: 'Kabbadi',
    players: [
      'Ram',    'Shyam',
      'Guru',   'Uday',
      'Darsh',  'Aakesh',
      'Aakav',  'Aarav',
      'Advik',  'Darpan',
      'Evak',   'Ekansh',
      'Adarsh'
    ]
  }
]